mobile scrollbar fix v0.1

--- a/src/scss/sections/_experience.scss
+++ b/src/scss/sections/_experience.scss
@@ -35,7 +35,8 @@
     overflow-y: hidden;
 
     &::-webkit-scrollbar {
-      width: 0;
+      // width: 0;
+      -webkit-appearance: none;
     }
 
     @media (width >= 768px) {
